[package]
name = "myday"
version = "0.1.0"
authors = ["Inwerejosic inwerejosic@protonmail.com"]
edition = "2024"


[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "macros", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }
